# simpleparty

./: Makefile  README.md  pyproject.toml  server.py
src/simpleparty/: __init__.py  __main__.py  server.py
