[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpleparty"
version = "0.2.2"
description = "Easily enjoy your private video collection"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.8"
dependencies = []
authors = [
    { name = "Guy Freeman" },
]
keywords = ["video", "media", "server", "browser", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Topic :: Multimedia :: Video",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/gfrmin/simpleparty"
Repository = "https://github.com/gfrmin/simpleparty"

[project.scripts]
simpleparty = "simpleparty.server:main"
